# dune-project

./: .gitmodules  README.md  README.md~  external.sh  install.sh  install.sh~  update.sh
dune-documents/: PDELabTutorialsInstructions.txt
dune-heat/: CMakeLists.txt  Makefile.am  configure.ac  dune-heat.pc.in  dune.module
dune-heat/cmake/modules/: Makefile.am
dune-heat/doc/: Makefile.am
dune-heat/dune/: Makefile.am
dune-heat/dune/heat/: Makefile.am
dune-heat/m4/: CMakeLists.txt  Makefile.am  dune-heat.m4
dune-heat/src/: CMakeLists.txt  dune-heat.cc  nonlinearheatfem.hh
